--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
-#root {
-  color: red;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+#root {
+    display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 90%;
+  gap: 2rem;
+  margin: 0 auto;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(241, 235, 236);
+  text-align: center;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+
+.episode-summary {
+  width: 85%;
+  margin: auto;
+  text-align: left;
+}
+
+.episode-name {
+  border: 2px black solid;
+  border-radius: 5px;
+  padding: 0.5rem 0;
+  margin-top: 0;
+  font-size: 18px;
+  color: black
+
+}
+
+.episode-image {
+  margin: auto;
+  border-radius: 5px;
+}
+
+
+
