--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 #root {
-    display: grid;
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 90%;
   gap: 2rem;
@@ -15,7 +15,7 @@ body {
 .wrapper {
   width: 100%;
   height: 100%;
-  background-color: rgb(241, 235, 236);
+  background-color: #ebedf0;
   text-align: center;
   margin: 0 auto;
   border-radius: 10px;
@@ -33,14 +33,10 @@ body {
   padding: 0.5rem 0;
   margin-top: 0;
   font-size: 18px;
-  color: black
-
+  color: black;
 }
 
 .episode-image {
   margin: auto;
   border-radius: 5px;
 }
-
-
-
