--- a/style.css
+++ b/style.css
@@ -6,15 +6,16 @@ body {
 
 #root {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 20rem));
+  justify-content: center;
   width: 90%;
   gap: 2rem;
   margin: 0 auto;
+  margin-bottom: 50px;
 }
 
 .wrapper {
   width: 100%;
-  height: 100%;
   background-color: #ebedf0;
   text-align: center;
   margin: 0 auto;
@@ -26,6 +27,7 @@ body {
   width: 85%;
   margin: auto;
   text-align: left;
+  font-size: 13px;
 }
 
 .episode-name,
@@ -38,23 +40,40 @@ body {
   color: black;
 }
 
+.searchEpisode {
+  display: flex;
+}
+
 .episode-image,
 .show-image {
   margin: auto;
   border-radius: 5px;
+  width: 80%;
+  object-fit: contain;
+}
+
+.show-name {
+  cursor: pointer;
 }
 
 #episode-dropdown {
   display: none;
 }
 
-.nav {
+.container {
   display: flex;
   justify-content: center;
   margin: 15px;
+  /* border: 3px solid red; */
 }
 
 #show-dropdown,
 #episode-dropdown {
   width: 18rem;
 }
+
+/* @media (min-width: 600px) {
+  .wrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
+} */
