--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   box-sizing: border-box;
 }
 
+
+
 #root {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(10rem, 20rem));
@@ -12,6 +14,7 @@ body {
   gap: 2rem;
   margin: 0 auto;
   margin-bottom: 50px;
+  margin-top: 100px;
 }
 
 .wrapper {
@@ -42,6 +45,7 @@ body {
 
 .searchEpisode {
   display: flex;
+  
 }
 
 .episode-image,
@@ -62,18 +66,25 @@ body {
 
 .container {
   display: flex;
-  justify-content: center;
+  justify-content:space-between;
   margin: 15px;
-  /* border: 3px solid red; */
+  background-color: white;
+  margin-left: 121px;
+  
+  
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+
+  
+  
 }
 
 #show-dropdown,
 #episode-dropdown {
   width: 18rem;
+  
 }
 
-/* @media (min-width: 600px) {
-  .wrapper {
-    grid-template-columns: repeat(3, 1fr);
-  }
-} */
+
